# sil_test

./: .coverage  .env.example  .gitignore  Pipfile  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  test.yml
scripts/: flower.sh  lint.sh  worker.sh
src/store/: celery.py  celery_conf.py  db.sqlite3
src/store/core/: db.py  utils.py
src/store/customer/: factories.py  models.py  serilizer.py  tests.py  urls.py  views.py
src/store/customer/migrations/: 0001_initial.py  0002_alter_customer_code.py  0003_customer_phone_number.py  0004_alter_customer_name.py
src/store/order/: apps.py  factories.py  models.py  serializer.py  signals.py  tasks.py  tests.py  urls.py  views.py
src/store/order/migrations/: 0001_initial.py  0002_orderitems_amount.py
src/store/product/: factories.py  models.py  serializers.py  tests.py  urls.py  views.py
src/store/product/migrations/: 0001_initial.py
src/store/store/: asgi.py  settings.py  urls.py
src/store/utils/: at.py
